// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Login /> component should match snapshot when loading 1`] = `
<DocumentFragment>
  <div
    class="container flex items-center fr"
  >
    <div
      class="relative"
    >
      <button
        class="ButtonWithIcon-mock"
        type="button"
      >
        <div
          class="flex pv2 items-center"
        />
      </button>
      <div>
        <div
          class="box absolute z-max dn"
        >
          <div
            class="arrowUp absolute top-0 right-0 shadow-3 bg-base mr3 rotate-45 h2 w2"
          />
          <div
            class="contentContainer shadow-3 mt3"
          >
            <div
              class="content flex relative bg-base justify-around overflow-hidden pa4 center contentInitialScreen items-baseline"
            >
              <div
                class="contentForm dn ph4 pb6"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Login /> component should match snapshot with data 1`] = `
<DocumentFragment>
  <div
    class="container flex items-center fr"
  >
    <div
      class="relative"
    >
      <button
        class="ButtonWithIcon-mock"
        type="button"
      >
        <div
          class="flex pv2 items-center"
        >
          <span
            class="profile t-action--small order-1 pl4 white dn db-l"
          >
            Hello, firstName
          </span>
        </div>
      </button>
      <div>
        <div
          class="box absolute z-max dn"
        >
          <div
            class="arrowUp absolute top-0 right-0 shadow-3 bg-base mr3 rotate-45 h2 w2"
          />
          <div
            class="contentContainer shadow-3 mt3"
          >
            <div
              class="content flex relative bg-base justify-around overflow-hidden pa4 center items-baseline"
            >
              <div
                class="contentForm dn ph4 pb6 contentFormVisible db "
              >
                <div
                  style="opacity: 0; transform: translateX(50%);"
                >
                  <div
                    class="accountOptions items-center w-100"
                  >
                    <div
                      class="ma4 min-h-2 b--muted-4"
                    >
                      <a
                        href="store.account"
                      >
                        <button
                          class="button bw1 ba ttu br2 t-action--small v-mid relative pv3 ph5 t-heading-5 bg-base b--transparent c-action-primary  hover-c-action-primary pointer"
                          closeonclick=""
                        >
                          <span
                            class="t-action--small"
                          >
                            My Account
                          </span>
                        </button>
                      </a>
                    </div>
                    <hr
                      class="mv2 o-30"
                    />
                    <div
                      class="ma4 min-h-2 b--muted-4"
                    >
                      <button
                        class="Button-mock"
                        type="button"
                      >
                        <span
                          class="t-action--small"
                        >
                          Logout
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Login /> component should match snapshot with data only email 1`] = `
<DocumentFragment>
  <div
    class="container flex items-center fr"
  >
    <div
      class="relative"
    >
      <button
        class="ButtonWithIcon-mock"
        type="button"
      >
        <div
          class="flex pv2 items-center"
        >
          <span
            class="profile t-action--small order-1 pl4 white dn db-l"
          >
            Hello, email@v...
          </span>
        </div>
      </button>
      <div>
        <div
          class="box absolute z-max dn"
        >
          <div
            class="arrowUp absolute top-0 right-0 shadow-3 bg-base mr3 rotate-45 h2 w2"
          />
          <div
            class="contentContainer shadow-3 mt3"
          >
            <div
              class="content flex relative bg-base justify-around overflow-hidden pa4 center items-baseline"
            >
              <div
                class="contentForm dn ph4 pb6 contentFormVisible db "
              >
                <div
                  style="opacity: 0; transform: translateX(50%);"
                >
                  <div
                    class="accountOptions items-center w-100"
                  >
                    <div
                      class="ma4 min-h-2 b--muted-4"
                    >
                      <a
                        href="store.account"
                      >
                        <button
                          class="button bw1 ba ttu br2 t-action--small v-mid relative pv3 ph5 t-heading-5 bg-base b--transparent c-action-primary  hover-c-action-primary pointer"
                          closeonclick=""
                        >
                          <span
                            class="t-action--small"
                          >
                            My Account
                          </span>
                        </button>
                      </a>
                    </div>
                    <hr
                      class="mv2 o-30"
                    />
                    <div
                      class="ma4 min-h-2 b--muted-4"
                    >
                      <button
                        class="Button-mock"
                        type="button"
                      >
                        <span
                          class="t-action--small"
                        >
                          Logout
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Login /> component should match snapshot without data 1`] = `
<DocumentFragment>
  <div
    class="container flex items-center fr"
  >
    <div
      class="relative"
    >
      <button
        class="ButtonWithIcon-mock"
        type="button"
      >
        <div
          class="flex pv2 items-center"
        />
      </button>
      <div>
        <div
          class="box absolute z-max dn"
        >
          <div
            class="arrowUp absolute top-0 right-0 shadow-3 bg-base mr3 rotate-45 h2 w2"
          />
          <div
            class="contentContainer shadow-3 mt3"
          >
            <div
              class="content flex relative bg-base justify-around overflow-hidden pa4 center contentInitialScreen items-baseline"
            >
              <div
                style="opacity: 0; transform: translateX(-50%);"
              >
                <div
                  class="options"
                >
                  <h3
                    class="formTitle t-body v-mid ttu tc relative pv2 ph3 br2"
                  >
                    Choose an option to sign in
                  </h3>
                  <ul
                    class="optionsList list pa0"
                  >
                    <li
                      class="optionsListItem mb3"
                    >
                      <div
                        class="button buttonDanger"
                      >
                        <button
                          class="Button-mock"
                          type="button"
                        >
                          <div
                            class="db"
                          >
                            Something bad happened...
                          </div>
                          <span
                            class="t-small pt1"
                          >
                            Click to try again.
                          </span>
                        </button>
                      </div>
                    </li>
                    <li
                      class="optionsListItem optionsListItemContainer mb3"
                    >
                      <div
                        class="ExtensionContainer-mock"
                      >
                        container
                      </div>
                    </li>
                  </ul>
                </div>
              </div>
              <div
                class="contentForm dn ph4 pb6"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
